static/css/index.css
/* FONT */
@font-face {
	font-family: "OpenSans";
	src: local("/font/OpenSans-Regular.ttf"), url("/font/OpenSans-Regular.ttf") format("truetype");
	font-display: swap;
}

/* HTML ELEMENTS */
* {
	font-family: "OpenSans", sans-serif;
}

body, html {
	display: flex;
	width: 100%;
	height: 100%;
	margin: 0;
	padding: 0;
	color: #fff;
	background: #567890;
	overflow-wrap: anywhere;
}

a {
	color: #abcdef;
}

aside {
	position: relative;
	width: 18em;
	height: 100%;
	padding: .5em 1em;
	background-color: #345678;
	outline: .25em solid #012345;
}

dfn {
	text-decoration: underline dotted;
	text-decoration-skip: none;
	text-decoration-skip-ink: none;
	text-decoration-thickness: .1em;
	text-decoration-color: #fff;
	font-style: normal;
	cursor: help;
}

h1, h2, h3, h4, h5, h6 {
	margin: 0;
}

h1 {
	width: 100%;
	font-size: 1.75em;
}

h2 {
	font-size: 1.3em;
}

header {
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
	white-space: nowrap;
}

hr {
	width: calc(100% - .5em);
	margin: .5em auto;
	border: 0;
	border-bottom: .15em solid #234567;
}

input, textarea {
	display: inline-block;
	min-height: 1em;
	font-size: 1.2em;
}

input[type=button] {
	margin: 0 auto;
	padding: 0 1em;
	cursor: pointer;
}

input[type=radio] {
	margin: 0;
	padding: .5em;
	cursor: pointer;
}

input[type=range] {
	display: block;
	width: 9em;
	font-size: 1em;
	cursor: grab;
}

input[type=range]:active {
	cursor: grabbing;
}

input:disabled {
	cursor: auto;
}

label {
	width: max-content;
}

li {
	margin: .25em 0;
}

main {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	justify-content: flex-start;
	width: calc(100vw - 20em);
	max-width: calc(100vw - 20em);
	height: 100%;
	overflow-x: auto;
	overflow-y: scroll;
}

output {
	min-width: 1.2em;
	padding: 0 .5em;
	text-align: right;
}

p {
	margin: .5em 0;
}

select {
	cursor: pointer;
}

table {
	border-collapse: collapse;
	border: .15em solid #234567;
	min-width: 18em;
}

td {
	padding: .25em .5em;
	font-size: 1.1em;
}

td:nth-of-type(even) {
	text-align: right;
}

tr:nth-of-type(even) {
	background-color: #3C5E80;
}

tr:nth-of-type(odd) {
	background-color: #2C4E70;
}

ul {
	margin: .5em;
	padding: 0;
	list-style-type: none;
}

/* CLASSES */
.attribution {
	font-size: .9em;
	display: flex;
	flex-flow: row nowrap;
	justify-content: space-between;
	border-top: .15em solid #123456;
	color: #fff;
}

.attribution span {
	padding: .25em .5em;
}

.author {
	display: block;
	font-size: .75em;
	font-style: italic;
}

.author.done:after {
	content: "Done!";
	margin-left: .5em;
	padding: .15em .25em;
	background-color: #123456;
	font-style: normal;
}

.box {
	padding: 1em 1.2em;
	text-align: start;
	background-color: #345678;
	filter: drop-shadow(.25em .25em 0 #012345);
}

.boxlet {
	margin: 1em 0 0;
	padding: .5em;
	border: .15em solid #234567;
	text-align: start;
}

.canvas-container, #cCursor {
	position: absolute !important;
	top: 0;
}

.center {
	align-self: center;
	text-align: center;
}

.copyright {
	position: absolute;
	bottom: 0;
	right: 0;
	padding: .5em;
}

.download {
	float: right;
	font-size: .85em;
}

.flex {
	display: flex;
	flex-flow: column nowrap;
}

.page {
	display: block;
	width: 100%;
}

.presentDraw {
	display: block;
	width: calc(100% - 1em);
	margin: 0 .5em .5em;
	background-color: #fff;
}

.presentWrite {
	font-size: 1.1em;
	margin: 0 .5em .5em;
	padding: .5em;
	background-color: #fff;
}

.right {
	overflow: hidden;
	float: right;
	padding: 0 .2em;
	outline: .2em solid #123456;
	background-color: #123456;
}

.row {
	flex-flow: row nowrap;
	justify-content: space-between;
	align-items: center;
}

.spin {
	animation: spin 2s infinite linear;
}

/* IDS */
#canvas {
	position: relative;
	height: min-content;
	border: .15em solid #234567;
}

#canvasBase, #previousDraw {
	display: block;
	height: calc(100vh - 16em);
	min-width: 20em;
	min-height: 15em;
	background-color: #FFFFFF;
}

#cCursor, #cRegl {
	position: relative;
	pointer-events: none !important;
}

#draw, #write {
	min-width: 20em;
	padding: .5em 1em;
	border-top: .15em solid #234567;
}

#game {
	width: 100%;
}

#gameplay {
	margin: auto;
	max-height: calc(100% - 2em);
}

#gameplay label {
	line-height: 1.3em;
}

#inviteButton, #presentTable input {
	padding: 0 .2em;
	font-size: 1em;
}

#inputWrite {
	min-height: 1em;
	max-height: 12em;
	resize: vertical;
	overflow-y: hidden;
}

#join input[type=text] {
	margin-bottom: .8em;
}

#loading {
	position: fixed;
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	padding: 0;
	margin: 0;
	background: rgba(35, 69, 103, .1);
	z-index: 100;
	cursor: wait;
}

#palette, #stuff {
	display: flex;
	flex-flow: column nowrap;
	align-items: center;
	width: 3em;
}

#presentControls {
	margin-bottom: -.75em;
}

#presentControls input, #inputPresentOverride {
	font-size: 1em;
	margin: .15em;
}

#presentWindow {
	width: calc((60vh) * 4 / 3);
	height: calc(100vh - 10em);
	overflow-x: hidden;
	overflow-y: scroll;
	color: #000;
	background-color: #234567;
	border: .15em solid #123456;
	scrollbar-width: thin;
}

#previous {
	padding-bottom: .5em;
}

#previousWrite {
	max-width: calc(100% - 22em);
	margin: 0;
	font-size: 1.2em;
}

#settings label {
	cursor: pointer;
	margin: 0 .4em;
}

#settings > .row {
	height: 2.5em;
}

#status {
	justify-content: center;
	padding: .5em .5em 0;
}

#timer {
	display: inline-block;
	animation-duration: .1s;
	animation-name: tick-1;
	animation-iteration-count: 1;
}

#you {
	font-weight: bold;
}

/* DRAWING */
[id^=tool], .color {
	display: block;
	box-sizing: content-box;
	width: 2em;
	height: 2em;
	margin: 0 !important;
	padding: 0 !important;
	border: .15em solid #012345;
	outline: none;
	background: #6789AB url(/img/tools.png) no-repeat top left;
	background-size: 10em 6em;
}

.color {
	-webkit-appearance: none;
	-moz-appearance: none;
	appearance: none;
	flex: 1 1 .5em;
	width: 2em;
	background: none;
	border-width: .1em;
	line-height: 0;
}

.color:checked {
	z-index: 0;
	border-color: #89ABCD;
	outline: .1em solid #89ABCD;
}

.color:hover {
	outline: .1em solid #89ABCD;
}

[id^=tool]:hover, .color:hover {
	z-index: 1;
	border-color: #89ABCD;
	cursor: pointer;
}

[id^=tool]:disabled, .color:disabled {
	z-index: -1;
	border-color: #1f4163;
	background-color: #486a8c;
	background-position-y: bottom !important;
	cursor: default;
}

[id^=tool]:active, .selected {
	background-position-y: center;
}

#toolColor {
	min-height: 2em;
	background-color: #345678;
	background-image: none;
}

#colorContainer {
	margin-top: .15em;
}

#colorContainer::after {
	content: '';
	pointer-events: none;
	display: block;
	position: relative;
	z-index: 1;
	width: 2em;
	height: 2em;
	font-size: 1.2em;
	margin: -2.1em .1em .1em;
	background: url(/img/tools.png) no-repeat bottom left;
	background-size: 10em 6em;
}

#colorContainer.alt::after {
	background-position-x: -2em;
}

#toolErase {
	background-position-x: -2em;
}

#toolFill {
	background-position-x: -4em;
}

#undoRedo {
	display: flex;
	flex-flow: row nowrap;
	justify-content: center;
	margin: .15em 0;
}

#toolUndo, #toolRedo {
	width: 1em;
	height: 1em;
	background-size: 5em 3em;
}

#toolUndo {
	background-position-x: -3em;
}

#toolRedo {
	background-position-x: -4em;
}

#colorHistory, #colorRadio {
	display: flex;
	flex-flow: column nowrap;
	height: 100%;
	margin: .15em 0;
	border: .1em solid #012345;
}

[id^=options] {
	display: flex;
	flex-flow: column nowrap;
	width: 100%;
	align-items: center;
}

#brushSize {
	width: 2.3em;
	font-size: 1em;
}

#brushSizeRange {
	width: 2.3em;
	height: 6.9em;
	margin: .15em 0;
	writing-mode: bt-lr;
	-webkit-appearance: slider-vertical;
}

/* OVERRIDES */
.hidden {
	display: none !important;
}

.blurred {
	color: transparent !important;
	text-shadow: rgba(255, 255, 255, 1) 0 0 .5em;
}

.fade-out {
	opacity: 1;
	animation: fade-out 1.5s linear forwards;
}

/* ANIMATIONS */
@keyframes fade-out {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 1;
	}
	100% {
		opacity: 0;
	}
}

@keyframes spin {
	from {
		transform: rotate(0deg);
	}
	to {
		transform: rotate(359deg);
	}
}

@keyframes tick-1 {
	0% {
		transform: scale(1.1);
	}
	100% {
		transform: scale(1);
	}
}

@keyframes tick-2 {
	0% {
		transform: scale(1.1);
	}
	100% {
		transform: scale(1);
	}
}

/* DIALOG POLYFILL */
dialog {
	position: absolute;
	left: 0;
	right: 0;
	width: fit-content;
	height: fit-content;
	margin: auto;
	border: .15em solid #001234;
	padding: 1em;
	background-color: #345678;
	color: #fff;
	display: block;
	filter: drop-shadow(.25em .25em 0 #012345);
}

dialog:not([open]) {
	display: none;
}

dialog::backdrop, dialog + .backdrop {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background-color: rgba(35, 69, 103, .2);
}

._dialog_overlay {
	position: fixed;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
}

dialog.fixed {
	position: fixed;
	top: 50%;
	transform: translate(0, -50%);
}

